    connections and RPC calls, and add MultipleLinearRandomRetry, a new retry
    policy.  (szetszwo)

    HDFS-3516. Check content-type in WebHdfsFileSystem.  (szetszwo)

    HADOOP-8365. Provide ability to disable working sync. (eli)

    MAPREDUCE-4399. Change the Jetty response buffer size to improve 
    shuffle performance. (Luke Lu via suresh)

  BUG FIXES

    MAPREDUCE-4087. [Gridmix] GenerateDistCacheData job of Gridmix can
                    become slow in some cases (ravigummadi)

    HDFS-2305. Running multiple 2NNs can result in corrupt file system. (atm)

    HADOOP-7634. Docs specify wrong owner for task-controller.cfg (eli)

    HADOOP-7665. branch-0.20-security doesn't include SPNEGO settings in
                 core-default.xml (atm)

    HADOOP-7666. branch-0.20-security doesn't include
                 o.a.h.security.TestAuthenticationFilter (atm)

    HADOOP-7621. alfredo config should be in a file not readable by users (atm)

    HADOOP-7653. tarball doesn't include .eclipse.templates.
    (Jonathan Natkins via eli)

    MAPREDUCE-2932. Missing instrumentation plugin class shouldn't
    crash the TT startup per design. (harsh via eli)

    HADOOP-7629. Allow immutable FsPermission objects to be used as IPC
    parameters. (todd)

    MAPREDUCE-3405. Fix compilation in contrib tests broken by commit
    of MAPREDUCE-3015. (todd)

    MAPREDUCE-2073. TestTrackerDistributedCacheManager should be
    up-front about requirements on build environment. (todd)

    HADOOP-7297. Remove docs for CN and BN, as they aren't present. (harsh)

    HDFS-2541. For a sufficiently large value of blocks, the DN Scanner
    may request a random number with a negative seed value. (harsh via eli)

    MAPREDUCE-2377. task-controller fails to parse configuration if it
    doesn't end in \n. (todd via eli)

    MAPREDUCE-2905. Fix fair scheduler to prevent clumping of tasks when
    assignmultiple is enabled. (todd)
